--- a/_config.yml
+++ b/_config.yml
@@ -7,4 +7,8 @@ github:
   is_project_page: false
 show_downloads: false
 
+social-network-links:
+  email: "yutong.qu@adelaide.student.edu.au"
+
+
 # logo: qyt.png
