--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ github:
   is_project_page: false
 show_downloads: false
 
-email: "yutong.qu@adelaide.student.edu.au"
+author:
+  email: yutong.qu@adelaide.student.edu.au
 
 
 # logo: qyt.png
