--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,14 @@ theme: jekyll-theme-minimal
 title: Yutong Qu
 email: yutong.qu@outlook.com
 
+description:
+  Email: yutong.qu@outlook.com
+
 github:
   repository_url: false
   is_user_page: false
   is_project_page: false
 show_downloads: false
 
-
+host: false
 # logo: qyt.png
