--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yutong Qu
 email: yutong.qu@outlook.com
 
 description:
-  Email":" yutong.qu@outlook.com
+  Email - yutong.qu@outlook.com
 
 github:
   repository_url: false
