--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: yutong.qu@outlook.com
 description:
   
   
-  Email - yutong.qu@outlook.com
+  Email：yutong.qu@outlook.com
 
 github:
   repository_url: false
