--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
-theme: jekyll-theme-minimal
 title: Yutong Qu
 logo: qyt.png
 email: yutong.qu@outlook.com
 
 description:
-  
-  
+  &nbsp;
   Email：yutong.qu@outlook.com
 
 github:
@@ -17,3 +15,8 @@ show_downloads: false
 author: false
 host: false
 
+# Build settings
+# theme: jekyll-theme-minimal
+theme: minimal-mistakes-jekyll
+plugins:
+  - jekyll-feed
