--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ title: Yutong Qu
 logo: qyt.png
 email: yutong.qu@outlook.com
 
-description:
-  &nbsp;
+description: |
   Email：yutong.qu@outlook.com
 
 github:
@@ -15,6 +14,6 @@ show_downloads: false
 
 author: false
 host: false
-copyright: "2022"
+copyright: false
 
 
