--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ social:
   email: true
 
 description:
-  Email：yutong.qu@outlook.com"
+  Email：yutong.qu@outlook.com
 
 github:
   repository_url: false
