--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,7 @@ theme: jekyll-theme-minimal
 title: Yutong Qu
 logo: qyt.png
 email: yutong.qu@outlook.com
-
-social:
-  email: true
+email_link: yutong.qu@outlook.com
 
 description:
   Email：yutong.qu@outlook.com
@@ -14,9 +12,5 @@ github:
   is_user_page: false
   is_project_page: false
 show_downloads: false
-
-author: false
-host: false
-copyright: false
 
 
