--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ logo: qyt.png
 email: yutong.qu@outlook.com
 email_link: yutong.qu@outlook.com
 
-description:
-  Email：yutong.qu@outlook.com
+# description:
 
 github:
   repository_url: false
