--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Yutong Qu
 logo: qyt.png
 email: yutong.qu@outlook.com
 email_link: yutong.qu@outlook.com
+linkedin: https://linkedin.com/in/yutong-qu-barbara024
 
 # description:
 
