--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Yutong Qu
-logo: qyt.png
+logo: /assets/img/qyt.png
 email: yutong.qu@outlook.com
 email_link: yutong.qu@outlook.com
 linkedin: https://linkedin.com/in/yutong-qu-barbara024
