--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: jekyll-theme-minimal
 title: Yutong Qu
 logo: /assets/img/qyt.png
-email: yutong.qu@outlook.com
-email_link: yutong.qu@outlook.com
+email: yutong.qu@adelaide.edu.au
+email_link: yutong.qu@adelaide.edu.au
 linkedin: https://linkedin.com/in/yutong-qu-barbara024
 
 # description:
