--- a/_config.yml
+++ b/_config.yml
@@ -16,4 +16,7 @@ show_downloads: false
 dblp_logo: /assets/img/dblp.png
 dblp_link: https://dblp.org/pid/319/3075.html
 
+resgate_logo: /assets/img/resgate.png
+resgate_link: https://www.researchgate.net/profile/Yutong_Qu3
+
 
