--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,6 @@ dblp_link: https://dblp.org/pid/319/3075.html
 resgate_logo: /assets/img/resgate.png
 resgate_link: https://www.researchgate.net/profile/Yutong_Qu3
 
+orcid_logo: /assets/img/orcid.png
+orcid_link: https://orcid.org/0000-0002-1378-8779
 
