--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ show_downloads: false
 dblp_logo: /assets/img/dblp.png
 dblp_link: https://dblp.org/pid/319/3075.html
 
+gscholar_logo: /assets/img/gscholar.png
+gscholar_link: https://scholar.google.com/citations?user=XRCzTuEAAAAJ&hl=en
+
 resgate_logo: /assets/img/resgate.png
 resgate_link: https://www.researchgate.net/profile/Yutong_Qu3
 
